--- a/Localizaçao.html
+++ b/Localizaçao.html
@@ -19,7 +19,7 @@
     <h1>LOCALIZAÇÃO</h1>
     <nav>
         <Ul>
-            <li><a href= "Floriculturainicio.html">Pagina inicial</a></li>
+            <li><a href= "index.html">Pagina inicial</a></li>
                 <li><a href= "Localizaçao.html">Localização</a></li>
                 <li><a href= "site.html">Site de compras</a></li>
                 <li><a href= "Cuidados.html">Cuidados</a></li>
