--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>JARDIM - FLORIDO</h1>
         <nav>
             <ul>
-                <li><a href= "Floriculturainicio.html">Pagina inicial</a></li>
+                <li><a href= "index.html">Pagina inicial</a></li>
                 <li><a href= "Localizaçao.html">Localização</a></li>
                 <li><a href= "site.html">Site de compras</a></li>
                 <li><a href= "Cuidados.html">Cuidados</a></li>
